2007-11-22  Satoshi Nakagawa <artension@gmail.com>

	Added a check box on the paste sheet, use Notice command.

2007-11-22  Satoshi Nakagawa <artension@gmail.com>

	Added options, highlight a whole line and highlight your current nickname.

2007-11-22  Satoshi Nakagawa <artension@gmail.com>

	Improved sending a text message started with "/".
	Now a message started with "//" is to send a message started with "/".

2007-11-21  Satoshi Nakagawa <artension@gmail.com>

	Implementing the channel list dialog.

2007-11-21  Satoshi Nakagawa <artension@gmail.com>

	Implementing the channel list dialog.
	Changed to stop printing names when the client joined a channel.

2007-11-21  Satoshi Nakagawa <artension@gmail.com>

	Changed the url regex to allow IDNs.

2007-11-21  Satoshi Nakagawa <artension@gmail.com>

	Implemented log transcripts.

2007-11-21  Satoshi Nakagawa <artension@gmail.com>

	Changed to add self and peer to the member list in a talk.

2007-11-13  Satoshi Nakagawa <artension@gmail.com>

	Enabled ruby thread hooks.

2007-11-10  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, SACrashReporter should make the directory if it doesn't exist.

2007-11-09  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, SACrashReporter crashes when Library/CrashReporter directory doesn't exist.

2007-11-05  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, exceptions from Socket.getaddrinfo should be caught.

2007-11-04  Satoshi Nakagawa <artension@gmail.com>

	Updated SACrashReporter.

2007-11-04  Satoshi Nakagawa <artension@gmail.com>

	Updated and enabled SACrashReporter.
	Thanks to Eloy Duran.

2007-11-01  Satoshi Nakagawa <artension@gmail.com>

	Trying to integrate SACrashReporter.
	Thanks to Eloy Duran.

2007-11-01  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, data source of OutlineView should return kind of NSObject.

2007-10-31  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, double clicks on the console log didn't work.
